--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Calacirya
-description: The GitHub page to the Calacirya organization.
+description: Sí vanwa ná, Rómello vanwa, Valimar!
 github_username:  Calacirya
 
 plugins:
