Fix site url reference

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Calacirya
 description: Sí vanwa ná, Rómello vanwa, Valimar!
 repository: calacirya/calacirya.github.io
-home: https://github.com/calacirya/
 
 plugins:
   - jekyll-mentions
@@ -18,8 +17,8 @@ theme: jekyll-theme-cayman
 # If you want a starred project on display, add it's name below.
 # Please note that this method draws the from GitHub Metadata's
 #   public_repositories to show appropriate data.
-star_project: foo
+star_project: Hearth
 
-#menus:
-#  - link: "/coc"
-#    text: "Code of Conduct"
+menus:
+  - link: "/posts"
+    text: "Blog"
